--- a/sass/style.css
+++ b/sass/style.css
@@ -1,15 +1,27 @@
-header nav {
-  width: 100%;
-  height: 50px;
-  background-color: #585857;
+body {
+  margin: 0px;
+  background-color: #DADADA;
 }
 
-section#cotizador {
+main#cotizador {
   width: 100%;
   height: auto;
   padding: 50px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+header nav {
+  width: 100%;
+  height: 50px;
+  background-color: #585857;
 }
 
 .cont-hoja {
@@ -183,8 +195,157 @@ section#cotizador {
   background-color: #FFDD08;
 }
 
-body {
+section#datosPosiciones {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-datos-posiciones {
+  width: 110px;
+  height: 100px;
+  border: solid 3px #585857;
+  background-color: #ffffff;
+  margin: 0px 20px 20px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.datos-posicion {
+  padding: 5px 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.datos-posicion h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  color: #3C3C3B;
+  text-align: center;
   margin: 0px;
-  background-color: #DADADA;
+  padding: 0px;
+  border-bottom: solid #DADADA 1px;
+}
+
+.nombre-posicion::before {
+  content: "";
+}
+
+.datos-impresiones {
+  padding: 5px 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.datos-impresiones h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #3C3C3B;
+  text-align: center;
+  font-style: italic;
+  margin: 0px;
+  padding: 0px;
+  border-bottom: solid #DADADA 1px;
+}
+
+.nombre-impresiones::before {
+  content: " Imp";
+}
+
+.datos-vw {
+  padding: 5px 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.datos-vw h5 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  color: #3C3C3B;
+  font-weight: bold;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+  border-bottom: solid #DADADA 1px;
+}
+
+.nombre-vw::before {
+  content: " %VW";
+}
+
+.datos-porcentaje {
+  width: 80%;
+  margin: 0px 10%;
+  height: 10px;
+  background-color: #F3F3F4;
+  border-radius: 10px;
+}
+
+.datos-porcentaje .relleno-porcentaje {
+  margin: 0%;
+  height: 10px;
+  background-color: blue;
+  border-radius: 10px;
+}
+
+.datos-porcentaje .size-10 {
+  width: 10%;
+}
+
+.datos-porcentaje .size-20 {
+  width: 20%;
+}
+
+.datos-porcentaje .size-30 {
+  width: 30%;
+}
+
+.datos-porcentaje .size-40 {
+  width: 40%;
+}
+
+.datos-porcentaje .size-50 {
+  width: 50%;
+}
+
+.datos-porcentaje .size-60 {
+  width: 60%;
+}
+
+.datos-porcentaje .size-70 {
+  width: 70%;
+}
+
+.datos-porcentaje .size-80 {
+  width: 80%;
+}
+
+.datos-porcentaje .size-90 {
+  width: 90%;
+}
+
+.datos-porcentaje .size-100 {
+  width: 100%;
+}
+
+.datos-porcentaje .color-bajo {
+  background-color: #E52521;
+}
+
+.datos-porcentaje .color-medio {
+  background-color: #F9EA31;
+}
+
+.datos-porcentaje .color-alto {
+  background-color: #8EC045;
 }
 /*# sourceMappingURL=style.css.map */
