--- a/sass/_homeDesktop.scss
+++ b/sass/_homeDesktop.scss
@@ -106,7 +106,203 @@ header{
 
             }
 
+            .cont-modulo-03{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+                
+                .modulo-03-a{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                    .modulo-03-b{
+                        width: 260px;
+                        height: auto;
+                        padding: 0px;
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                    }
+            }
+
+            .cont-modulo-04{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-05{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                .modulo-05-a{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                .modulo-05-b{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+            }
+
+            .cont-modulo-06{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-07{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                .modulo-07-a{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                .modulo-07-b{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+            }
+
+            .cont-modulo-08{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-09{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                .modulo-09-a{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                .modulo-09-b{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+            }
+
+            .cont-modulo-10{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-11{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                    .modulo-11-a{
+                        width: 260px;
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                    }
+
+                    .modulo-11-b{
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    .modulo-11-c{
+                        display: flex;
+                        flex-direction: column;
+                    }
+            }
+
         }
+
+        .cont-cajas-medias{
+            width: 110px;
+            height: auto;
+            display: flex;
+            flex-direction: column;
+
+                .caja-media-superior{
+                    width: 110px;
+                    height: 35px;
+                    margin: 10px 10px 10px 10px;
+                    background-color: $cajaVacia;
+                }
+        
+                .caja-media-inferior{
+                    width: 110px;
+                    height: 35px;
+                    margin: 10px 10px 10px 10px;
+                    background-color: $cajaVacia;
+                }
+        }
+
+
 
         .caja-simple{
             width: 110px;
@@ -118,6 +314,13 @@ header{
         .caja-doble{
             width: 240px;
             height: 90px;
+            margin: 10px;
+            background-color: $cajaVacia;
+        }
+
+        .caja-cuadruple{
+            width: 240px;
+            height: 200px;
             margin: 10px;
             background-color: $cajaVacia;
         }
@@ -135,6 +338,28 @@ header{
             background-color:$cajaPublicidad;
         }
 
+        .horizontal-2{
+            width: 500px;
+            height: 90px;
+            margin: 10px;
+            background-color:$cajaPublicidad;
+        }
+
+        .horizontal-3{
+            width: 500px;
+            height: 90px;
+            margin: 10px;
+            background-color:$cajaPublicidad;
+        }
+
+        .horizontal-5{
+            width: 500px;
+            height: 90px;
+            margin: 10px;
+            background-color:$cajaPublicidad;
+        }
+
+
         .caja-0{
             width: 110px;
             height: 200px;
@@ -145,6 +370,27 @@ header{
         .caja-1{
             width: 110px;
             height: 90px;
+            margin: 10px;
+            background-color: $cajaPublicidad;
+        }
+
+        .caja-2{
+            width: 110px;
+            height: 90px;
+            margin: 10px;
+            background-color: $cajaPublicidad;
+        }
+
+        .caja-3{
+            width: 110px;
+            height: 90px;
+            margin: 10px;
+            background-color: $cajaPublicidad;
+        }
+
+        .caja-4{
+            width: 110px;
+            height: 200px;
             margin: 10px;
             background-color: $cajaPublicidad;
         }
