--- a/sass/style.css
+++ b/sass/style.css
@@ -147,6 +147,311 @@ header nav {
           justify-content: space-between;
 }
 
+.cont-hoja .hoja .cont-modulo-03 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-03 .modulo-03-a {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-03 .modulo-03-b {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-04 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-05 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-05 .modulo-05-a {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-05 .modulo-05-b {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-06 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-07 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-07 .modulo-07-a {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-07 .modulo-07-b {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-08 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-09 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-09 .modulo-09-a {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-09 .modulo-09-b {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-10 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-11 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-11 .modulo-11-a {
+  width: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-11 .modulo-11-b {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .hoja .cont-modulo-11 .modulo-11-c {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .cont-cajas-medias {
+  width: 110px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .cont-cajas-medias .caja-media-superior {
+  width: 110px;
+  height: 35px;
+  margin: 10px 10px 10px 10px;
+  background-color: #B3B4B7;
+}
+
+.cont-hoja .cont-cajas-medias .caja-media-inferior {
+  width: 110px;
+  height: 35px;
+  margin: 10px 10px 10px 10px;
+  background-color: #B3B4B7;
+}
+
 .cont-hoja .caja-simple {
   width: 110px;
   height: 90px;
@@ -157,6 +462,13 @@ header nav {
 .cont-hoja .caja-doble {
   width: 240px;
   height: 90px;
+  margin: 10px;
+  background-color: #B3B4B7;
+}
+
+.cont-hoja .caja-cuadruple {
+  width: 240px;
+  height: 200px;
   margin: 10px;
   background-color: #B3B4B7;
 }
@@ -174,6 +486,27 @@ header nav {
   background-color: #FFDD08;
 }
 
+.cont-hoja .horizontal-2 {
+  width: 500px;
+  height: 90px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .horizontal-3 {
+  width: 500px;
+  height: 90px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .horizontal-5 {
+  width: 500px;
+  height: 90px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
 .cont-hoja .caja-0 {
   width: 110px;
   height: 200px;
@@ -184,6 +517,27 @@ header nav {
 .cont-hoja .caja-1 {
   width: 110px;
   height: 90px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .caja-2 {
+  width: 110px;
+  height: 90px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .caja-3 {
+  width: 110px;
+  height: 90px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .caja-4 {
+  width: 110px;
+  height: 200px;
   margin: 10px;
   background-color: #FFDD08;
 }
@@ -228,7 +582,7 @@ section#datosPosiciones {
 
 .datos-posicion h3 {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: #3C3C3B;
   text-align: center;
   margin: 0px;
