--- a/sass/_homeDesktop.scss
+++ b/sass/_homeDesktop.scss
@@ -279,6 +279,153 @@ header{
                     }
             }
 
+            .cont-modulo-12{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                    .modulo-12-a{
+                        width: 260px;
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                    }
+
+                    .modulo-12-b{
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    .modulo-12-c{
+                        display: flex;
+                        flex-direction: column;
+                    }
+            }
+
+            .cont-modulo-13{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-14{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                .modulo-14-a{
+                    width: 260px;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                .modulo-14-b{
+                    width: 100%;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+                .modulo-14-b{
+                    width: 100%;
+                    height: auto;
+                    padding: 0px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+
+            }
+
+            .cont-modulo-15{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+
+                    .modulo-15-a{
+                        width: 260px;
+                        display: flex;
+                        flex-direction: row;
+                        flex-wrap: wrap;
+                    }
+
+                    .modulo-15-b{
+                        display: flex;
+                        flex-direction: column;
+                    }
+
+                    .modulo-15-c{
+                        display: flex;
+                        flex-direction: column;
+                    }
+            }
+
+            .cont-modulo-16{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-17{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .cont-modulo-18{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+            }
+
+            .cont-modulo-19{
+                width: 100%;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px;
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+
+            .cont-modulo-20{
+                width:500px;
+                height: auto;
+                display: flex;
+                padding: 0px;
+                margin: 0px 10px;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: space-between;
+            }
+
         }
 
         .cont-cajas-medias{
@@ -302,6 +449,34 @@ header{
                 }
         }
 
+        .caja-media-mitad{
+            width: 240px;
+            height: 45px;
+            margin: 10px;
+            background-color: $cajaVacia;
+        }
+
+        .cont-caja-media-cuarto{
+            width: 90px;
+            height: auto;
+            display: flex;
+            flex-direction: column;
+
+                .caja-media-cuarto{
+                    width: 100%;
+                    height: 25px;
+                    margin: 5px 0px;
+                    background-color: $cajaVacia;
+                }
+
+                .caja-media-cuarto-llena{
+                    width: 100%;
+                    height: 95px;
+                    margin: 5px 0px;
+                    background-color: $cajaVacia;
+                }
+
+        }
 
 
         .caja-simple{
@@ -325,6 +500,13 @@ header{
             background-color: $cajaVacia;
         }
 
+        .caja-fullpage{
+            width: 500px;
+            height: 200px;
+            margin: 10px;
+            background-color: $cajaVacia;
+        }
+
         .caja-ciega{
             width: 110px;
             height: 90px;
@@ -333,28 +515,35 @@ header{
 
         .horizontal-1{
             width: 500px;
-            height: 90px;
+            height: 45px;
             margin: 10px;
             background-color:$cajaPublicidad;
         }
 
         .horizontal-2{
             width: 500px;
-            height: 90px;
+            height: 135px;
             margin: 10px;
             background-color:$cajaPublicidad;
         }
 
         .horizontal-3{
             width: 500px;
-            height: 90px;
+            height: 135px;
+            margin: 10px;
+            background-color:$cajaPublicidad;
+        }
+
+        .horizontal-4{
+            width: 500px;
+            height: 135px;
             margin: 10px;
             background-color:$cajaPublicidad;
         }
 
         .horizontal-5{
             width: 500px;
-            height: 90px;
+            height: 135px;
             margin: 10px;
             background-color:$cajaPublicidad;
         }
@@ -395,9 +584,30 @@ header{
             background-color: $cajaPublicidad;
         }
 
+        .caja-5{
+            width: 110px;
+            height: 200px;
+            margin: 10px;
+            background-color: $cajaPublicidad;
+        }
+
         .caja-6{
             width: 110px;
             height: 90px;
+            margin: 10px;
+            background-color: $cajaPublicidad;
+        }
+
+        .caja-7{
+            width: 110px;
+            height: 200px;
+            margin: 10px;
+            background-color: $cajaPublicidad;
+        }
+
+        .caja-8{
+            width: 110px;
+            height: 200px;
             margin: 10px;
             background-color: $cajaPublicidad;
         }
