--- a/sass/style.css
+++ b/sass/style.css
@@ -426,6 +426,252 @@ header nav {
           flex-direction: column;
 }
 
+.cont-hoja .hoja .cont-modulo-12 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-12 .modulo-12-a {
+  width: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-12 .modulo-12-b {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .hoja .cont-modulo-12 .modulo-12-c {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .hoja .cont-modulo-13 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-14 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-14 .modulo-14-a {
+  width: 260px;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-14 .modulo-14-b {
+  width: 100%;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-14 .modulo-14-b {
+  width: 100%;
+  height: auto;
+  padding: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-15 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-15 .modulo-15-a {
+  width: 260px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-15 .modulo-15-b {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .hoja .cont-modulo-15 .modulo-15-c {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .hoja .cont-modulo-16 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-17 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-18 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.cont-hoja .hoja .cont-modulo-19 {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cont-hoja .hoja .cont-modulo-20 {
+  width: 500px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0px;
+  margin: 0px 10px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .cont-hoja .cont-cajas-medias {
   width: 110px;
   height: auto;
@@ -452,6 +698,39 @@ header nav {
   background-color: #B3B4B7;
 }
 
+.cont-hoja .caja-media-mitad {
+  width: 240px;
+  height: 45px;
+  margin: 10px;
+  background-color: #B3B4B7;
+}
+
+.cont-hoja .cont-caja-media-cuarto {
+  width: 90px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cont-hoja .cont-caja-media-cuarto .caja-media-cuarto {
+  width: 100%;
+  height: 25px;
+  margin: 5px 0px;
+  background-color: #B3B4B7;
+}
+
+.cont-hoja .cont-caja-media-cuarto .caja-media-cuarto-llena {
+  width: 100%;
+  height: 95px;
+  margin: 5px 0px;
+  background-color: #B3B4B7;
+}
+
 .cont-hoja .caja-simple {
   width: 110px;
   height: 90px;
@@ -473,6 +752,13 @@ header nav {
   background-color: #B3B4B7;
 }
 
+.cont-hoja .caja-fullpage {
+  width: 500px;
+  height: 200px;
+  margin: 10px;
+  background-color: #B3B4B7;
+}
+
 .cont-hoja .caja-ciega {
   width: 110px;
   height: 90px;
@@ -481,28 +767,35 @@ header nav {
 
 .cont-hoja .horizontal-1 {
   width: 500px;
-  height: 90px;
+  height: 45px;
   margin: 10px;
   background-color: #FFDD08;
 }
 
 .cont-hoja .horizontal-2 {
   width: 500px;
-  height: 90px;
+  height: 135px;
   margin: 10px;
   background-color: #FFDD08;
 }
 
 .cont-hoja .horizontal-3 {
   width: 500px;
-  height: 90px;
+  height: 135px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .horizontal-4 {
+  width: 500px;
+  height: 135px;
   margin: 10px;
   background-color: #FFDD08;
 }
 
 .cont-hoja .horizontal-5 {
   width: 500px;
-  height: 90px;
+  height: 135px;
   margin: 10px;
   background-color: #FFDD08;
 }
@@ -542,11 +835,71 @@ header nav {
   background-color: #FFDD08;
 }
 
+.cont-hoja .caja-5 {
+  width: 110px;
+  height: 200px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
 .cont-hoja .caja-6 {
   width: 110px;
   height: 90px;
   margin: 10px;
   background-color: #FFDD08;
+}
+
+.cont-hoja .caja-7 {
+  width: 110px;
+  height: 200px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-hoja .caja-8 {
+  width: 110px;
+  height: 200px;
+  margin: 10px;
+  background-color: #FFDD08;
+}
+
+.cont-textos-cajas {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.cont-textos-cajas .textos-cajas {
+  width: 100%;
+  height: 40px;
+}
+
+.cont-textos-cajas .textos-cajas h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #2C3E50;
+  font-weight: 500;
+  margin: 0px;
+  text-align: center;
+}
+
+.cont-textos-cajas .textos-cajas h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #2C3E50;
+  font-weight: 300;
+  margin: 0px;
+  text-align: center;
 }
 
 section#datosPosiciones {
