--- a/sass/style.css
+++ b/sass/style.css
@@ -869,6 +869,10 @@ header nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -900,6 +904,49 @@ header nav {
   font-weight: 300;
   margin: 0px;
   text-align: center;
+}
+
+.nombre-lazyload::before {
+  content: "LL";
+}
+
+.cont-textos-lazyload {
+  width: 100%;
+  height: 20px;
+  top: -20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  position: relative;
+  z-index: 1000;
+}
+
+.cont-textos-lazyload .texto-lazyload {
+  width: 100%;
+  height: 20px;
+  position: relative;
+}
+
+.cont-textos-lazyload .texto-lazyload h3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #c00d0d;
+  font-weight: 700;
+  margin: 0px 10px;
+  text-align: right;
+  text-transform: uppercase;
 }
 
 section#datosPosiciones {
