--- a/sass/_datosPosiciones.scss
+++ b/sass/_datosPosiciones.scss
@@ -1,8 +1,3 @@
-//Tipografias
-
-$montserrat: 'Montserrat', sans-serif;
-
-
 //Colores
 
 $colorFondoDatos: #E50051;
@@ -36,6 +31,7 @@ $trazoSeparacion: 1px;
 section#datosPosiciones{
     display: flex;
     flex-direction: column;
+    display: none;
 }
 
 .cont-datos-posiciones{
@@ -59,7 +55,7 @@ section#datosPosiciones{
             text-align: center;
             margin: 0px ;
             padding: 0px;
-            border-bottom: solid $colorSeparacion 1px ;
+            border-bottom: solid $colorSeparacion $trazoSeparacion ;
         }
 }
 
@@ -79,7 +75,7 @@ section#datosPosiciones{
         font-style: italic;
         margin: 0px ;
         padding: 0px;
-        border-bottom: solid $colorSeparacion 1px ;
+        border-bottom: solid $colorSeparacion $trazoSeparacion ;
     }
 }
 
@@ -99,7 +95,7 @@ section#datosPosiciones{
         text-align: center;
         margin: 0px ;
         padding: 0px;
-        border-bottom: solid $colorSeparacion 1px ;
+        border-bottom: solid $colorSeparacion $trazoSeparacion ;
     }
 }
 
