--- a/sass/_homeDesktop.scss
+++ b/sass/_homeDesktop.scss
@@ -1,7 +1,3 @@
-//Tipografias
-
-$montserrat: 'Montserrat', sans-serif;
-
 //Colores
 
 $colorHoja: #F3F3F4;
@@ -9,6 +5,8 @@ $cajaPublicidad: #FFDD08;
 $cajaVacia: #B3B4B7;
 $colorcabeceraHoja: #BDBCBC;
 $colorNavbar: #585857;
+$colorSeccion: #939394;
+
 
 //Estilos
 
@@ -52,6 +50,16 @@ header{
                         width: auto;
                         height: 20px;
                     }
+
+                    .texto-seccion{
+                        h1{
+                            font-family: Arial, Helvetica, sans-serif ;
+                            font-size: 14px ;
+                            color:$colorSeccion ;
+                            margin: 0px 10px;
+                        }
+                    }
+
             }
 
             .cont-modulo-01{
