--- a/sass/_notaDesktop.scss
+++ b/sass/_notaDesktop.scss
@@ -215,7 +215,7 @@ $colorPrerroll: #D20A11;
             width: 110px;
             height: 300px;
             margin: 10px;
-            background-image: url(/img/mas_leida_desktop.svg);
+            background-image: url(../img/mas_leida_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -223,7 +223,7 @@ $colorPrerroll: #D20A11;
             width: 370px;
             height: 100px;
             margin: 10px;
-            background-image: url(/img/titulo_nota_desktop.svg);
+            background-image: url(../img/titulo_nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -231,7 +231,7 @@ $colorPrerroll: #D20A11;
             width: 240px;
             height: 25px;
             margin: 10px;
-            background-image: url(/img/autor_nota_desktop.svg);
+            background-image: url(../img/autor_nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -239,7 +239,7 @@ $colorPrerroll: #D20A11;
             width: 240px;
             height: 95px;
             margin: 10px;
-            background-image: url(/img/parrafo_nota_desktop.svg);
+            background-image: url(../img/parrafo_nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -253,7 +253,7 @@ $colorPrerroll: #D20A11;
             width: 370px;
             height: 14px;
             margin: 10px;
-            background-image: url(/img/epigrafe_nota_desktop.svg);
+            background-image: url(../img/epigrafe_nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -261,7 +261,7 @@ $colorPrerroll: #D20A11;
             width: 240px;
             height: 145px;
             margin: 10px;
-            background-image: url(/img/fin_nota_desktop.svg);
+            background-image: url(../img/fin_nota_desktop.svg);
             background-repeat: no-repeat;
         }
         
@@ -269,7 +269,7 @@ $colorPrerroll: #D20A11;
             width: 240px;
             height: 220px;
             margin: 10px;
-            background-image: url(/img/comentarios_nota_desktop.svg);
+            background-image: url(../img/comentarios_nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
