--- a/sass/_subhomeDesktop.scss
+++ b/sass/_subhomeDesktop.scss
@@ -157,7 +157,7 @@ $colorSeccion: #939394;
             width: 110px;
             height: 90px;
             margin: 10px;
-            background-image: url(/img/nota_desktop.svg);
+            background-image: url(../img/nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -179,7 +179,7 @@ $colorSeccion: #939394;
             width: 370px;
             height: 170px;
             margin: 10px;
-            background-image: url(/img/carrusel_desktop.svg);
+            background-image: url(../img/carrusel_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -187,7 +187,7 @@ $colorSeccion: #939394;
             width: 110px;
             height: 300px;
             margin: 10px;
-            background-image: url(/img/mas_leida_desktop.svg);
+            background-image: url(../img/mas_leida_desktop.svg);
             background-repeat: no-repeat;
         }
 
