--- a/sass/_datosPosiciones.scss
+++ b/sass/_datosPosiciones.scss
@@ -31,7 +31,7 @@ $trazoSeparacion: 1px;
 section#datosPosiciones{
     display: flex;
     flex-direction: column;
-    display: none;
+    display: block;
 }
 
 .cont-datos-posiciones{
