--- a/sass/_textosCajas.scss
+++ b/sass/_textosCajas.scss
@@ -1,6 +1,7 @@
 // Colores
 
 $colorTextosCajas:#2C3E50;
+$colorTextosCajasBlanco:#ffffff;
 $colorLazyload: #c00d0d;
 
 
@@ -15,11 +16,11 @@ $colorLazyload: #c00d0d;
 
         .textos-cajas{
             width: 100%;
-            height: 40px;
+            height: 30px;
 
                 h1{
                     font-family: 'Roboto', sans-serif;
-                    font-size: 16px;
+                    font-size: 14px;
                     color:$colorTextosCajas ;
                     font-weight: 500;
                     margin: 0px;
@@ -28,14 +29,34 @@ $colorLazyload: #c00d0d;
 
                 h2{
                     font-family: 'Roboto', sans-serif;
-                    font-size: 16px;
+                    font-size: 12px;
                     color:$colorTextosCajas ;
                     font-weight: 300;
                     margin: 0px;
                     text-align: center;
                 }
 
+                .texto-color-blanco{
+                    color:$colorTextosCajasBlanco;
+                }
+
         }
+}
+
+.cont-player-play{
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.player-play::before{
+    width: 30px;
+    height: 30px;
+    content: url(../img/player_play.svg);
 }
 
 .nombre-lazyload::before {
