--- a/sass/_homeDesktop.scss
+++ b/sass/_homeDesktop.scss
@@ -10,6 +10,46 @@ $colorClarin:#D90E22;
 
 //Estilos
 
+.btn-zoom {
+	width: 140px;
+	height: 50px;
+	background-color: #d90e22;
+	color: #fafafa;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 30px;
+	position: fixed;
+	border-radius: 0px 8px 8px 0px;
+	cursor: pointer;
+	box-shadow: 0px 20px 25px -5px rgba(0, 0, 0, 0.1),
+		0px 10px 10px -5px rgba(0, 0, 0, 0.04);
+	button {
+		width: 45px;
+		height: 50px;
+		background-color: #d90e22;
+		border: none;
+		&:active {
+			transform: translateY(1px);
+			background-color: #dd0f24;
+		}
+		img {
+			width: 40%;
+		}
+	}
+}
+
+#scroll-container {
+	width: 100vw;
+	height: auto;
+	padding: 0px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	box-sizing: border-box;
+}
+
 .cont-hoja{
     width: 100%;
     height: auto;
