--- a/sass/style.scss
+++ b/sass/style.scss
@@ -114,10 +114,12 @@ main#tripticoMobile{
     justify-content: space-between
 }
 
-//Importando todos los estilos
+//Calculadora
+
 
 //Home Desktop 
 @import 'homeDesktop';
+
 
 //Modulo de datos de las posiciones
 @import 'textosCajas';
